# mpi-examples

./: .gitignore  CMakeLists.txt  MPI_DATATYPES_PRESENTATION.pptx  README.md  example1.c  example2.c  example3.c  example4.c  lab1.c  lab1_generator.c  lab1_log
